<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:context=".Activity3">

    <Button
        android:id="@+id/button4"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="90dp"
        android:onClick="goHomeNew"
        android:text="@string/VolverAtras"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button6"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="36dp"
        android:onClick="iniciarServicio"
        android:text="@string/Iniciar_Servicio"
        android:textAlignment="center"
        android:textColor="#C62828"
        android:textIsSelectable="false"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="56dp"
        android:onClick="detenerServicio"
        android:text="@string/Detener_Servicio"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="108dp"
        android:background="#058FD2CB"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6">


        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableBottom="#00FFFFFF"
            android:onClick="reproducirMusica"

            android:text="@string/Reproducir_música"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="pararMusica"
            android:text="@string/Parar_música"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="detenerAplicacion"
            android:text="@string/Detener_APP"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="30sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:layout_marginBottom="49dp"
        android:text="@string/muestra_texto"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>